--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -72,11 +72,11 @@
 
 @*<div id="Schedule-addRequest-title" class="displaynone">@Resources.NewTextRequest</div>*@
 <div id="Schedule-addRequest-title"class="displaynone">
-	<span id="Text-request-tab" class="selectable-tab selected-tab">@Resources.NewTextRequest</span>
+	<span id="Text-request-tab" class="selectable-tab selected-tab">@Resources.TextRequest</span>
 	@if (Model.RequestPermission.AbsenceRequestPermission)
 	{
 		<span>|</span>
-		<span id="Absence-request-tab" class="selectable-tab">@Resources.CreateAbsenceRequest</span>
+		<span id="Absence-request-tab" class="selectable-tab">@Resources.AbsenceRequest</span>
 	}
 </div>
 
