--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.ConfigTool/Gui/View/JobHistoryTreeView.xaml
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.ConfigTool/Gui/View/JobHistoryTreeView.xaml
@@ -1,18 +1,21 @@
-﻿<UserControl x:Class="Teleopti.Analytics.Etl.ConfigTool.Gui.View.JobHistoryView"
-			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:Controls="clr-namespace:Ricciolo.Controls;assembly=Ricciolo.Controls.TreeListView"
-			 xmlns:ViewModel="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.Gui.ViewModel">
+﻿<UserControl x:Class="Teleopti.Analytics.Etl.ConfigTool.Gui.View.JobHistoryTreeView"
+			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			xmlns:Controls="clr-namespace:Ricciolo.Controls;assembly=Ricciolo.Controls.TreeListView"
+			xmlns:ViewModel="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.Gui.ViewModel"
+			xmlns:Commands="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.Gui.ViewModel"
+			 >
 
 	<Control.Resources>
-		<HierarchicalDataTemplate x:Key="dt"  ItemsSource="{Binding Path=JobStepsHistory}" DataType="{x:Type ViewModel:JobHistoryViewModel}" />
+		<HierarchicalDataTemplate x:Key="dt"  ItemsSource="{Binding Path=JobStepsHistory}" DataType="{x:Type ViewModel:JobHistoryTreeViewModel}" />
 		<SolidColorBrush x:Key="ErrorColor" Color="Red" />
 	</Control.Resources>
 	<Grid>
-		<Controls:TreeListView x:Name="tlv"  ItemsSource="{Binding}" ItemTemplate="{StaticResource dt}">
+		<Controls:TreeListView x:Name="treeListView"  ItemsSource="{Binding}" ItemTemplate="{StaticResource dt}" PreviewMouseRightButtonDown="treeListView_PreviewMouseRightButtonDown" SelectedItemChanged="treeListView_SelectedItemChanged">
 			<Controls:TreeListView.ContextMenu>
-				<ContextMenu >
-					<MenuItem x:Name="menuItemCopyError" Header="Copy Error" Click="menuItemCopyError_Click" />
+				<ContextMenu Opened="ContextMenu_Opened">
+					<!--<MenuItem x:Name="menuItemCopyError" Header="Copy Error" Click="menuItemCopyError_Click" Command="{Binding Path=CopyExceptionCommand}" />-->
+					<MenuItem x:Name="menuItemCopyError" Header="Copy Error" Command="{Binding Path=CopyExceptionCommand}" />
 				</ContextMenu>
 			</Controls:TreeListView.ContextMenu>
 			<Controls:TreeListView.Columns>
@@ -26,7 +29,8 @@
 				<GridViewColumn Header="Error Message" DisplayMemberBinding="{Binding Path=ErrorMessage}" Width="350" />
 			</Controls:TreeListView.Columns>
 			<Controls:TreeListView.ItemContainerStyle>
-				<Style TargetType="TreeViewItem">
+				<Style TargetType="{x:Type TreeViewItem}">
+					<Setter Property="IsSelected" Value="{Binding IsSelected}" />
 					<Setter Property="Foreground">
 						<Setter.Value>
 							<Binding RelativeSource="{x:Static RelativeSource.Self}" Path="Success" />
