--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/CalendarView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/CalendarView.css
@@ -21,6 +21,9 @@
 	{
 		border-left: 1px solid #f9f9f9;
 		border-right: 1px solid #dfdfdf;
+		/*Safari inline-block fix*/
+		display: block;
+		float: left;
 	}
 }
 
