more fix for rtl ui

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/CalendarView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/CalendarView.css
@@ -25,6 +25,11 @@
 		display: block;
 		float: left;
 	}
+	.rtl .weekdays li, 
+	.rtl .calendarview-week li
+	{
+		float: right;
+	}
 }
 
 .calendarview-week li:first-child{border-left-color: transparent; color: #fff; font-size: 11px; text-align: center; width: 38px;}
