Show what absence the absence request is about. Also turns off possibility to modify a absence request for now.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
@@ -63,6 +63,8 @@
 					<span class="request-data-updatedon"></span>
 					<span class="request-caption">@Resources.Status: </span>
 					<span class="request-data-status"></span>
+					<span class="request-caption" id="absenceInfo">@Resources.Absence: </span>
+					<span class="request-data-payload"></span>
 				</div>
 				<div class="request-text request-data-text">
 				</div>
