--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Authentication/SignInWindowsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Authentication/SignInWindowsPartial.cshtml
@@ -2,12 +2,13 @@
 @model SignInWindowsViewModel
 
 <div id="windows_partial_target">
-    @using (Ajax.BeginForm("Windows", new AjaxOptions
+    @using (Ajax.BeginForm(new AjaxOptions
     {
         UpdateTargetId = "windows_partial_target",
         InsertionMode = InsertionMode.Replace,
 		OnComplete = "Teleopti.Start.Authentication.SignInPartialInit",
 		OnFailure = "Teleopti.Start.Common.AjaxFailed",
+		Url = "Windows"
     }))
     { 
 
