--- a/Teleopti.Ccc.WpfControls/Controls/Messaging/Views/FollowUpDialogueMessageView.xaml
+++ b/Teleopti.Ccc.WpfControls/Controls/Messaging/Views/FollowUpDialogueMessageView.xaml
@@ -11,12 +11,12 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="35"/>
 		</Grid.RowDefinitions>
-		<Controls:AnalogPresenter DataContext="{Binding Path=Created}"  
+        <Controls:AnalogPresenter DataContext="{Binding Path=CreatedAsLocal}"  
 								  HorizontalAlignment="Stretch" 
 								  VerticalAlignment="Center"
 								  Margin="0"/>
-		
-		<TextBlock Text="{Binding Path=Created,StringFormat=d}"
+
+        <TextBlock Text="{Binding Path=CreatedAsLocal,StringFormat=d}"
 				   Grid.Column="1"  
 				   Margin="2,0,5,0" 
 				   VerticalAlignment="Center"/>
