--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
@@ -40,6 +40,7 @@
 	<script src="@Url.Content("~/Content/Scripts/jquery.hoverIntent.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/jquery.qtip.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/indexOf.js")"></script>
+	<script src="@Url.Content("~/Content/Scripts/knockout-2.1.0.js")"></script>
 
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.extensions.js")"></script>
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.ui.labeledinput.js")"></script>
