--- a/Teleopti.Ccc.WpfControls/Resources/DateTimeConverters.xaml
+++ b/Teleopti.Ccc.WpfControls/Resources/DateTimeConverters.xaml
@@ -8,4 +8,5 @@
     <Converters:DateTimeConverter x:Key="DateTimeConverter" />
     <Converters:DateTimeToTimeConverter x:Key="DateTimeToTimeConverter"/>
     <DateTimeConverters:DateTimeToLocalConverter x:Key="DateTimeToLocalConverter"/>
+    <DateTimeConverters:TimeSpanToStringConverter x:Key="TimeSpanToStringConverter"/>
 </ResourceDictionary>
