--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/StudentAvailability/StudentAvailabilityPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/StudentAvailability/StudentAvailabilityPartial.cshtml
@@ -8,7 +8,7 @@
 	Layout = null;
 }
 
-<div id="StudentAvailability-period" class="pd5 info-pnl">
+<div id="StudentAvailability-period" class="pd5 information-panel">
 	@if (Model.StudentAvailabilityPeriod == null)
 	{
 		@string.Format("{0} : {1}", Resources.StudentAvailabilityPeriod, Resources.MissingWorkflowControlSet)
