--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Content/Css/Site.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Content/Css/Site.css
@@ -608,7 +608,7 @@ header {
 #body{background: transparent url(../Images/main_content_bg.jpg) center repeat-y; }
 #body-inner{background: transparent url(../Images/main_content_top_bg.jpg) top center no-repeat; }
 #body-bottom{background: transparent url(../Images/main_content_bottom_bg.jpg) bottom center no-repeat; }
-.info-pnl {
+.information-panel {
 	font-family: Verdana;
 	font-size: 11px;
 }
