--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -131,7 +131,7 @@
 		<input type="checkbox" id="Fullday-check"/>@Resources.FullDay<br />
 	</div>
 	<div class="edit-module-element clearleftfloat">
-		<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.NewRequest)"/>
+		<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.SendRequest)"/>
 	</div>
 	<div id="Schedule-addRequest-error" class="error clearleftfloat"></div>
 </div>
