--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -70,7 +70,6 @@
 </div>
 
 
-@*<div id="Schedule-addRequest-title" class="displaynone">@Resources.NewTextRequest</div>*@
 <div id="Schedule-addRequest-title"class="displaynone">
 	<span id="Text-request-tab" class="selectable-tab selected-tab">@Resources.TextRequest</span>
 	@if (Model.RequestPermission.AbsenceRequestPermission)
@@ -128,7 +127,7 @@
 		</select>
 	</div>
 	<div class="edit-module-element clearleftfloat floatleft">
-		<input type="checkbox" id="Fullday-check"/>@Resources.FullDay<br />
+		<input type="checkbox" id="Fullday-check" data-bind="checked:IsFullDay"/>@Resources.FullDay<br />
 	</div>
 	<div class="edit-module-element clearleftfloat">
 		<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.SendRequest)"/>
