update view for absence request in request page

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
@@ -8,6 +8,14 @@
 <div id="Requests-body-inner" class="request-body-inner relative">
 	<div id="Request-detail-section" class="displaynone request-edit-section ui-corner-all">
 		<input type="hidden" id="Request-detail-entityid"/>
+		<div id="Schedule-addRequest-title">
+			<span id="Text-request-tab" class="selectable-tab selected-tab">@Resources.TextRequest</span>
+			@*@if (Model.RequestPermission.AbsenceRequestPermission)
+			{*@
+				<span>|</span>
+				<span id="Absence-request-tab" class="selectable-tab">@Resources.AbsenceRequest</span>
+			@*}*@
+		</div>
 		<div class="edit-module-element">
 			<label class="displayblock" for="Request-detail-subject-input">@Resources.Subject</label>
 			<input id="Request-detail-subject-input" type="text"/>
@@ -15,6 +23,16 @@
 		<div class="edit-module-element">
 			<label class="displayblock" for="Request-detail-message-input">@Resources.Message</label>
 			<textarea id="Request-detail-message-input" />
+		</div>
+		<div id="Absence-type-element" class="edit-module-element floatleft displaynone">
+			<div class="floatleft absence-input-label">@Resources.AbsenceType</div>
+			<select id="Absence-type" class="floatleft absence-input combobox tooltip-dropdown-menu">
+				@*@foreach (var absenceType in Model.AbsenceTypes)
+		{
+					<option value="@Html.AttributeEncode(absenceType.Id)">@absenceType.Name</option>
+		}*@
+			</select>
+		
 		</div>
 		<div class="edit-module-element floatleft">
 			<input id="Request-detail-fromDate-input" class="date-input" type="text" value="@DateTime.Today.ToShortDateString()" />
@@ -39,6 +57,9 @@
 					<option @(timeSpan.Hours == 17 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
 				}
 			</select>
+		</div>
+		<div class="edit-module-element clearleftfloat floatleft">
+			<input type="checkbox" id="Fullday-check" data-bind="checked:IsFullDay"/>@Resources.FullDay<br />
 		</div>
 		<input id="Request-detail-ok-button" type="button" class="button mb5 floatright" update-value="@Html.AttributeEncode(Resources.Update)" new-value="@Html.AttributeEncode(Resources.NewRequest)"/>
 		<div id="Request-detail-error" class="error clearleftfloat"></div>
