--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
@@ -27,10 +27,10 @@
 		<div id="Absence-type-element" class="edit-module-element floatleft displaynone">
 			<div class="floatleft absence-input-label">@Resources.AbsenceType</div>
 			<select id="Absence-type" class="floatleft absence-input combobox tooltip-dropdown-menu">
-				@*@foreach (var absenceType in Model.AbsenceTypes)
+				@foreach (var absenceType in Model.AbsenceTypes)
 		{
 					<option value="@Html.AttributeEncode(absenceType.Id)">@absenceType.Name</option>
-		}*@
+		}
 			</select>
 		
 		</div>
